--- a/manifests/coworking-manifests.yaml
+++ b/manifests/coworking-manifests.yaml
@@ -1,3 +1,19 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: coworking
+spec:
+  type: LoadBalancer
+  selector:
+    service: coworking
+  ports:
+  - name: "5153"
+    protocol: TCP
+    port: 5153
+    targetPort: 5153
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,7 +32,7 @@ spec:
     spec:
       containers:
       - name: coworking
-        image: <DOCKER_IMAGE_URI_FROM_ECR>
+        image: 841135272578.dkr.ecr.ap-southeast-1.amazonaws.com/microproj_udacity:latest
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -26,17 +42,17 @@ spec:
           timeoutSeconds: 2
         readinessProbe:
           httpGet:
-            path: "/readiness_check"
+            path: /readiness_check
             port: 5153
           initialDelaySeconds: 5
           timeoutSeconds: 5
         envFrom:
         - configMapRef:
-            name: <NAME OF THE ConfigMap>
+            name: env-configmap
         env:
         - name: DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: <NAME OF THE Secret>
-              key: <THE KEY FROM Secret WHICH has THE ENCODED PASSWORD>
+              name: env-secret
+              key: DB_PASSWORD
       restartPolicy: Always
